--- a/index.html
+++ b/index.html
@@ -13,26 +13,36 @@
   </head>
   <body>
     <div class="container"></div>
+    <div class="weather-app-wrapper">
     <div class="weather-app">
-    <h1>New York</h1>
-    <ul>
-      <li>Friday 05:00</li>
-      <li>Clear</li>
-    </ul>
-    <div class="row">
-      <div class="col-6">
-        <img
-          src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-          alt="Clear"
-        />
-        12°C | °F
+      <div class="overview">
+      <h1>New York</h1>
+      <ul>
+        <li>Friday 05:00</li>
+        <li>Clear</li>
+      </ul>
       </div>
-      <div class="col-6">
-        <ul>
-          <li>Precipitation: 0%</li>
-          <li>Humidity: 73%</li>
-          <li>Wind: 2 km/h</li>
-        </ul>
+      <div class="row">
+        <div class="col-6">
+          <div class="clearfix-temperature">
+          <img
+            src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+            alt="Clear"
+            class="float-left"
+          />
+          <div class="float-left">
+            <strong>12</strong><span class="units">°C | <a href="#">°F</a></span>
+          </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <ul>
+            <li>Precipitation: 0%</li>
+            <li>Humidity: 73%</li>
+            <li>Wind: 2 km/h</li>
+          </ul>
+          </div>
+        </div>
       </div>
       <small>
         <a
@@ -41,8 +51,8 @@
           >Open-source code</a
         >
         by Demira Pasalic
-        </div>
       </small>
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
