--- a/index.html
+++ b/index.html
@@ -14,9 +14,29 @@
     <title>Weather App</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
     <div class="weather-app-wrapper">
     <div class="weather-app">
+      <form id="search-form" class="mb-3">
+        <div class="row">
+          <div class="col-9">
+        <input 
+        type="search" 
+        placeholder="Type here..." 
+        class="form-control"
+        id="city-input"
+        autocomplete="off"
+        />
+        </div>
+        <div class="col-3">
+        <input type="submit" 
+        value="search"
+        class="btn btn-primary w-100"
+        />
+        </div>
+        </div>
+
+      </form>
       <div class="overview">
       <h1 id="city"></h1>
       <ul>
@@ -43,6 +63,7 @@
             <li>Humidity: <span id="humidity"></span>%</li>
             <li>Wind: <span id="wind"></span> km/h</li>
           </ul>
+          </div>
           </div>
         </div>
       </div>
