--- a/index.html
+++ b/index.html
@@ -46,14 +46,17 @@
       </div>
       <div class="row">
         <div class="col-6">
-          <div class="clearfix-temperature">
+          <div class="clearfix weather-temperature">
           <img
             src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
             alt="Clear"
+            id="icon"
             class="float-left"
           />
           <div class="float-left">
-            <strong id="temperature"></strong><span class="units">°C | <a href="#">°F</a></span>
+            <strong id="temperature"></strong>
+            <span class="units"><a href="#" id="celsius-link" class="active">°C</a> | 
+              <a href="#" id="fahrenheit-link">°F</a></span>
           </div>
           </div>
         </div>
