--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,69 +14,70 @@
   </head>
   <body>
     <div class="container">
-    <div class="weather-app-wrapper">
-    <div class="weather-app">
-      <form id="search-form" class="mb-3">
-        <div class="row">
-          <div class="col-9">
-        <input 
-        type="search" 
-        placeholder="Type here..." 
-        class="form-control"
-        id="city-input"
-        autocomplete="off"
-        />
-        </div>
-        <div class="col-3">
-        <input type="submit" 
-        value="search"
-        class="btn btn-primary w-100"
-        />
-        </div>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <form id="search-form" class="mb-3">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="search"
+                  placeholder="Type here..."
+                  class="form-control"
+                  id="city-input"
+                  autocomplete="off"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
+            </div>
+          </form>
+          <div class="overview">
+            <h1 id="city"></h1>
+            <ul>
+              <li>Last updated: <span id="date"></span></li>
+              <li id="description"></li>
+            </ul>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="clearfix weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                  alt="Clear"
+                  id="icon"
+                  class="float-left"
+                />
+                <div class="float-left">
+                  <strong id="temperature"></strong>
+                  <span class="units"
+                    ><a href="#" id="celsius-link" class="active">°C</a> |
+                    <a href="#" id="fahrenheit-link">°F</a></span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-6">
+              <ul>
+                <li>Humidity: <span id="humidity"></span>%</li>
+                <li>Wind: <span id="wind"></span> km/h</li>
+              </ul>
+            </div>
+          </div>
         </div>
 
-      </form>
-      <div class="overview">
-      <h1 id="city"></h1>
-      <ul>
-        <li>Last updated: <span id="date"></span></li>
-        <li id="desription"></li>
-      </ul>
-      </div>
-      <div class="row">
-        <div class="col-6">
-          <div class="clearfix weather-temperature">
-          <img
-            src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-            alt="Clear"
-            id="icon"
-            class="float-left"
-          />
-          <div class="float-left">
-            <strong id="temperature"></strong>
-            <span class="units"><a href="#" id="celsius-link" class="active">°C</a> | 
-              <a href="#" id="fahrenheit-link">°F</a></span>
-          </div>
-          </div>
-        </div>
-        <div class="col-6">
-          <ul>
-            <li>Precipitation: 0%</li>
-            <li>Humidity: <span id="humidity"></span>%</li>
-            <li>Wind: <span id="wind"></span> km/h</li>
-          </ul>
-          </div>
-          </div>
-        </div>
-      </div>
-      <small>
-        <a
-          href="https://github.com/Demira11/Vanilla-weather-app.git"
-          target="_blank"
-          >Open-source code</a
-        >
-        by Demira Pasalic
-      </small>
+        <small>
+          <a
+            href="https://github.com/Demira11/Vanilla-weather-app.git"
+            target="_blank"
+            >Open-source code</a
+          >
+          by Demira Pasalic
+        </small>
       </div>
     </div>
     <script src="src/app.js"></script>
