--- a/index.html
+++ b/index.html
@@ -68,25 +68,8 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="weather-forecast-date">Wed</div>
-
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/48/sunny.png"
-                  alt=""
-                  width="42"
-                />
-                <div class="weather-forecast-temperature">
-                  <span class="weather-forecast-temperature-max">18°</span>
-                  <span class="weather-forecast-temperature-min">12°</span>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div class="weather-forecast" id="-forecast"></div>
         </div>
-
         <small>
           <a
             href="https://github.com/Demira11/Vanilla-weather-app.git"
