--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="src/style.css" />
-    <title>Weather app week 7</title>
+    <title>Weather app Final project</title>
   </head>
   <body>
     <div class="container">
